--- a/front end/index.html
+++ b/front end/index.html
@@ -18,14 +18,15 @@
     <link rel="stylesheet" href="./css/card.css" />
 </head>
 
-<body>
+<body onload="buscarGolpe(event)">
 
     <header>
+
         <div class="logo">
             <img src="./img/logo.png" alt="" class="imgLogo">
-            <p class="nomeLogo">CataGolpe</p>
+                <a href="./index.html"><p class="nomeLogo">CataGolpe</p></a>
         </div>
-
+        
         <div class="perfil">
 
 
